force-app/main/default/objects/Record_Watcher__e/Record_Watcher__e.object-meta.xml
<CustomObject>
    <label>Record Watcher</label>
    <pluralLabel>Record Watchers</pluralLabel>
</CustomObject>