force-app/main/default/objects/Record_Watcher__e/fields/Is_Watching__c.field-meta.xml
<CustomField>
    <fullName>Is_Watching__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Watching</label>
    <type>Checkbox</type>
</CustomField>