force-app/main/default/objects/Record_Watcher__e/fields/sObjectName__c.field-meta.xml
<CustomField>
    <fullName>sObjectName__c</fullName>
    <label>sObjectName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>