force-app/main/default/objects/Record_Watcher__e/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <label>User Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>